# rust-lambda-container-image

./: Cargo.toml  Dockerfile-cli-mixed  Dockerfile-simple-hello  Dockerfile-simple-regex  README.md  lambda-entrypoint-with-args.sh
cli-mixed/: Cargo.toml
cli-mixed/src/: main.rs
simple-hello/: Cargo.toml
simple-hello/src/: main.rs
simple-regex/: Cargo.toml
simple-regex/src/: main.rs
