[package]
name = "cli-mixed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "3.0.0-rc.7", features = ["derive"]}
lambda_runtime = "0.4"
once_cell = "1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = "1"
